fixed aligning

--- a/ReactTest_GettingStarted/style.css
+++ b/ReactTest_GettingStarted/style.css
@@ -39,6 +39,11 @@ h4 {
     margin-right: 10px;
 }
 
+.fLeft {
+    text-align: left;
+    margin-left: 10px;
+}
+
 .divCenter {
     text-align: left;
     padding: 2.2em;
